correct acessibilidade e contraste

--- a/css/conteudo.css
+++ b/css/conteudo.css
@@ -644,15 +644,6 @@
 	height: 86px;	
 }
 
-/* Fixes for IE < 8 */
-@media screen\9 {
-	.inserir .fileinput-button input {
-		filter: alpha(opacity=0);
-		font-size: 100%;
-		height: 100%;
-}
-
-
 /*******************************************/
 /************* Acessibilidade **************/
 /*******************************************/
